# dwarf_phyex_gt4py

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirement.txt  run_aro_adjust.sh
src/phyex_gt4py/: __init__.py  budget.py  config.py  constants.py  dimphyex.py  nebn.py  param_ice.py  phyex.py  rain_ice_descr.py  rain_ice_param.py
src/phyex_gt4py/drivers/: aro_adjust.py  config.py  ice_adjust.py  main_ice_adjust.py  main_rain_ice.py  tests.py
src/phyex_gt4py/functions/: backup.py  compute_ice_frac.py  condensation_src_1d.py  erf.py  gamma.py  ice4_sedimentation_stat.py  ice_adjust.py  icecloud.py  sign.py  src_1d.py  subgrid_mf.py  temperature.py  tiwmx.py
src/phyex_gt4py/initialisation/: reference.py  state.py
src/phyex_gt4py/phyex_common/: budget.py  constants.py  dimphyex.py  nebn.py  param_ice.py  phyex.py  rain_ice_descr.py  rain_ice_param.py
src/phyex_gt4py/stencils/: __init__.py  condensation.py  ice4_sedimentation_stat.py  ice_adjust.py  mass_flux.py  rain_ice.py  subgrid_autoconversions.py
src/wrapper/: call_get_data_ice_adjust.py  getdata_ice_adjust_mod.pyf
tests/phyex_common/: test_phyex.py
tests/stencils/: test.py  test_compile_stencils.py  test_ice_adjust.py
